# ROIProfilerCPP

./: .gitignore  CMakeLists.txt  HagnTool.cpp  HagnTool.h  README.md  RegionProfile.cpp  RegionProfile.cpp~  RegionProfile.h
Documentation/: Doxyfile
Documentation/docbook/: _a_m_d_g_p_u_arch_8cpp.xml  _a_m_d_g_p_u_arch_8cpp_source.xml  _a_p_i_notes_test_8cpp.xml  _a_p_i_notes_test_8cpp_source.xml  _a_r_c_migrate_8cpp.xml  _a_r_c_migrate_8cpp_source.xml  _assembly_info_8cs.xml  _assembly_info_8cs_source.xml  _basic_class_8m.xml  _basic_class_8m_source.xml  _build_system_8cpp.xml  _build_system_8cpp_source.xml  _c_index_8cpp.xml  _c_index_8cpp_source.xml  _c_index_c_x_x_8cpp.xml  _c_index_c_x_x_8cpp_source.xml  _c_index_code_completion_8cpp.xml  _c_index_code_completion_8cpp_source.xml  _c_index_diagnostic_8cpp.xml  _c_index_diagnostic_8cpp_source.xml  _c_index_diagnostic_8h.xml  _c_index_diagnostic_8h_source.xml  _c_index_high_8cpp.xml  _c_index_high_8cpp_source.xml  _c_index_inclusion_stack_8cpp.xml  _c_index_u_s_rs_8cpp.xml  (+632 more)
Tests/: Performance_Fibonacci_Without_Counter.cpp  Performance_ForLoops_Without_Counter.cpp  Performance_Prime_With_Counter_4.cpp  Performance_Prime_Without_Counter.cpp  Variable_Password_Size.cpp  Variable_Password_Size_With_Counter.cpp  Variable_Password_Size_Without_Counter.cpp  random.cpp
lib/: DataStorage.cpp  DataStorage.h  Helper.cpp
thesis/: README.md  content_building.tex  content_concepts.tex  content_conclusion.tex  content_evaluation.tex  content_introduction.tex  content_theory.tex  intro.bib  main.tex  my_macros.sty  vutinfth.ilg
(+2197 files in other folders)
